# cmake

./: excercises.txt  learnings.pptx  readme.txt
1CreatingMultipleExecutables/: Fibbonacci.cpp  PrintPrimeNumbers.cpp  cmakelists.txt  factorial.cpp
step1CreatingExecutable/: CMakeLists.txt  build.cmd  factorial.cpp  run.cmd
step2CreatingMultipleExecutables/: CMakeLists.txt  buildall.cmd  factorial.cpp  primecheck.cpp  runfact.cmd  runprime.cmd
step3CreatingExecutableAndLibrary/: CMakeLists.txt  buildall.cmd  factlib.cpp  factorial.cpp  run.cmd
step4CreatingLibraryInSeparateFolder/: CMakeLists.txt  buildall.cmd  factorial.cpp
step4CreatingLibraryInSeparateFolder/factlib/: CMakeLists.txt  factlib.cpp  factlib.h
step5UsingLibrarywithConfigurationOption/: CMakeLists.txt  buildall.cmd  factorial.cpp  factorialConfig.in.h
step5UsingLibrarywithConfigurationOption/factlib/: factlib.cpp
